--- a/templates/manage-product.html
+++ b/templates/manage-product.html
@@ -87,7 +87,8 @@
                             <div class="col-sm-12">
                                 <div class="form-group">
                                     <label >Unit</label>
-                                    <input class="form-control" placeholder="Quantity" name="quantity" id="quantity" type="text" min="0" value="">
+                                    <select name="uoms" id="uoms" class="form-control">
+                                    </select>    
                                 </div>
                             </div>
                             <div class="col-sm-12">
